# lorekeeper

./: .gitignore  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  chatter  chatter.py  config.yaml  docker-compose.yml  gradio_app.py  pyproject.toml  pytest.ini  requirements-ui.txt  requirements.txt  run_tests.sh  telegram.md  telegram_bot.py  test_auth_logic.py  test_botname.py  test_botname2.py  test_env_pydantic.py  test_is_mention.py  test_list_int.py  test_list_str.py
.github/workflows/: publish-docker.yml  test.yml
data/: doc1.txt  doc2.txt
rag_wrapper/: __init__.py  api.py  config.py  vector_store.py  wrapper.py
scripts/: chatter.py
src/: __init__.py  api.py  chat_manager.py  config.py  document_loader.py  gradio_app.py  session_storage.py  telegram_bot.py  text_chunker.py  vector_store.py  wrapper.py
tests/: __init__.py  performance_baseline.py  requirements-test.txt  test_api.py  test_async_handler.py  test_auth_logic.py  test_botname.py  test_botname3.py  test_config.py  test_env_pydantic.py  test_group.py  test_is_mention.py  test_list_int.py  test_list_str.py  test_mention.py  test_vector_store.py  test_wrapper.py
