[project]
name = "rag-wrapper"
version = "0.1.0"
description = "RAG system with vector storage abstraction"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "chromadb",
    "sentence-transformers",
    "pypdf",
    "litellm",
    "python-dotenv",
    "black",
    "pyyaml",
    "toml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "gradio>=4.0.0",
]

[tool.uv]
dev-dependencies = ["pytest", "pytest-mock", "pytest-cov", "gradio"]
