[project]
name = "lorekeeper"
version = "0.1.0"
description = "RAG system with vector storage abstraction"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "chromadb",
    "sentence-transformers",
    "pypdf",
    "litellm",
    "python-dotenv",
    "pyyaml",
    "toml",
    "pydantic-settings",
    "python-telegram-bot>=22.6",
    "telegramify-markdown>=1.1.0",
]

[dependency-groups]
ui = ["gradio>=4.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (deselect with '-m not integration')"]
